# explainitlikeimfive

./: .gitignore  CLAUDE.md  README.md  Word Corpus 1k.ipynb  main.py  pyproject.toml  topics.txt  words-1k.txt
backend/: app.py  requirements.txt
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
